<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 Slimroms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">DeviceHandler</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="cancel">Cancel</string>
    <string name="dlg_ok">OK</string>

    <string name="screen_off_gesture_title">Screen off gestures</string>
    <string name="group_applications">Applications</string>
    <string name="select_custom_app_title">Select custom application</string>

    <string name="enable_gestures_title">Enable gestures</string>
    <string name="enable_gestures_summary">Enable screen off gestures</string>
    <string name="gestures_title">Gestures</string>
    <string name="swipe_down_title">Swipe down</string>
    <string name="swipe_left_title">Swipe left</string>
    <string name="swipe_right_title">Swipe right</string>
    <string name="swipe_up_title">Swipe up</string>
    <string name="double_tap_title">Double tap</string>
    <string name="camera_title">Longpress volume in landscape</string>

</resources>
